// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrefixFileFormat OptionsPanel rendering completely different options renders 1`] = `
<withStyles(FormControl)
  fullWidth={true}
>
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="passwordFirstLine"
    label="Password is in first line (without prefix)"
  />
  <TextField
    id="passwordPrefix"
    label="password prefix"
    onChange={[Function]}
    required={false}
    select={false}
    value="pw:"
  />
  <TextField
    id="usernamePrefix"
    label="username prefix"
    onChange={[Function]}
    required={false}
    select={false}
    value="lg:"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="trimWhitespace"
    label="Trim whitespace"
  />
</withStyles(FormControl)>
`;

exports[`PrefixFileFormat OptionsPanel rendering default values renders 1`] = `
<withStyles(FormControl)
  fullWidth={true}
>
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={true}
        onChange={[Function]}
      />
    }
    id="passwordFirstLine"
    label="Password is in first line (without prefix)"
  />
  <TextField
    id="usernamePrefix"
    label="username prefix"
    onChange={[Function]}
    required={false}
    select={false}
    value="login:"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={true}
        onChange={[Function]}
      />
    }
    id="trimWhitespace"
    label="Trim whitespace"
  />
</withStyles(FormControl)>
`;

exports[`PrefixFileFormat OptionsPanel rendering without passwordPrefix renders 1`] = `
<withStyles(FormControl)
  fullWidth={true}
>
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="passwordFirstLine"
    label="Password is in first line (without prefix)"
  />
  <TextField
    id="passwordPrefix"
    label="password prefix"
    onChange={[Function]}
    required={false}
    select={false}
    value=""
  />
  <TextField
    id="usernamePrefix"
    label="username prefix"
    onChange={[Function]}
    required={false}
    select={false}
    value="login:"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={true}
        onChange={[Function]}
      />
    }
    id="trimWhitespace"
    label="Trim whitespace"
  />
</withStyles(FormControl)>
`;
